--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
             <button type="submit">Pesquisar</button>
         </form>
         </div>
+        <div class="botao-menu">
+            <button type="button">Abrir Menu</button>
+        </div>
         <nav class="container">
             <ul class="menu">
                 <li>
@@ -119,5 +122,13 @@
         </aside>
     </div>
 
+    <script src="https://code.jquery.com/jquery-3.7.0.min.js" integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script>
+    <script>
+        $(document).ready(function (){
+            $('.botao-menu button').click(function() {
+                $(.menu).slideToggle();
+            })
+        })
+    </script>
 </body>
 </html>
