--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
     <script>
         $(document).ready(function (){
             $('.botao-menu button').click(function() {
-                $(.menu).slideToggle();
+                $('.menu').slideToggle();
             })
         })
     </script>
